--- a/caddy-2/config.json
+++ b/caddy-2/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Caddy 2",
-  "version": "0.2.1-beta.1",
+  "version": "0.2.1",
   "slug": "caddy-2",
   "description": "Open source web and proxy server with automatic HTTPS",
   "url": "https://github.com/einschmidt/addon-caddy-2",
