--- a/yarr/config.json
+++ b/yarr/config.json
@@ -1,22 +1,30 @@
 {
   "name": "yarr!",
-  "version": "3f96f37",
+  "version": "0.0.4",
   "slug": "yarr",
   "description": "Yet another rss reader",
   "url": "https://github.com/einschmidt/addon-yarr",
   "ingress": true,
   "ingress_port": 7071,
   "panel_icon": "mdi:rss-box",
-  "arch": ["armhf", "armv7", "amd64", "aarch64"],
+  "arch": [
+    "armhf",
+    "armv7",
+    "amd64",
+    "aarch64"
+  ],
   "ports": {
     "80/tcp": null
   },
   "ports_description": {
     "80/tcp": "Web interface (Not required for Ingress)"
   },
-  "map": ["ssl"],
+  "map": [
+    "share:rw",
+    "ssl"
+  ],
   "options": {
-    "ssl": false,
+    "ssl": true,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem"
   },
@@ -25,6 +33,7 @@
     "ssl": "bool",
     "certfile": "str",
     "keyfile": "str",
-    "leave_front_door_open": "bool?"
-  }
+    "db_path": "str?"
+  },
+  "image": "ghcr.io/einschmidt/yarr/{arch}"
 }
